fix: Add `cmake` to deps

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /root
 
 # Install prerequisites
 RUN apt update -y && apt upgrade -y
-RUN apt install -y build-essential curl git xz-utils wget
+RUN apt install -y build-essential cmake curl git xz-utils wget
 
 # Install Rust and toolchains
 RUN wget https://sh.rustup.rs/rustup-init.sh
