--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,10 @@
 name: Docker
 
 on:
-  pull_request: # FIXME: Remove after debug
+  pull_request:
+    branches: [master]
+  push:
+    branches: [master]
   workflow_dispatch:
 
 jobs:
@@ -21,10 +24,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Build the image
+        if: github.event_name == 'pull_request'
+        uses: docker/build-push-action@v4
+        with:
+          context: docker
+
       - name: Build and push the image
+        if: github.event_name != 'pull_request'
         uses: docker/build-push-action@v4
         with:
           context: docker
           push: true
-          ulimit: nofile=1024000:1024000
           tags: ghcr.io/gear-dapps/gear-env:latest,ghcr.io/gear-dapps/gear-env:1.0
