--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /root
 
 # Install prerequisites
 RUN apt update -y && apt upgrade -y
-RUN apt install -y curl xz-utils wget
+RUN apt install -y build-essential cmake curl git xz-utils wget
 
 # Install Rust and toolchains
 RUN wget https://sh.rustup.rs/rustup-init.sh
@@ -18,6 +18,9 @@ RUN rustup toolchain install nightly-2023-03-14 --component llvm-tools-preview
 RUN rustup target add wasm32-unknown-unknown --toolchain nightly-2023-03-14
 RUN rm -rf /root/.rustup/toolchains/nightly-$(eval ${TARGET})
 RUN ln -s ~/.rustup/toolchains/nightly-2023-03-14-$(eval ${TARGET}) ~/.rustup/toolchains/nightly-$(eval ${TARGET})
+RUN rm -f rustup-init.sh
+ENV CARGO_NET_GIT_FETCH_WITH_CLI=true
+ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
 
 # Install Node.js and required packages
 RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
@@ -26,3 +29,14 @@ RUN npm install --global yarn
 
 # Install Gear node binary
 RUN curl -fsSL https://get.gear.rs/vara-testnet-x86_64-unknown-linux-gnu.tar.xz | tar -xJC /usr/bin
+ENV GEAR_NODE_PATH=/usr/bin/gear
+
+# Testing
+RUN git clone https://github.com/gear-dapps/app.git
+WORKDIR /root/app
+RUN make build
+RUN make full-test
+
+# Cleanup
+WORKDIR /root
+RUN rm -rf /root/app
