--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM ubuntu:22.04
 
+ARG NIGHTLY_TOOLCHAIN_VERSION=2023-03-14
 WORKDIR /root
 
 # Install prerequisites
@@ -14,10 +15,10 @@ ENV PATH="/root/.cargo/bin:$PATH"
 RUN rustup toolchain add nightly
 RUN rustup target add wasm32-unknown-unknown --toolchain nightly
 ARG TARGET="rustc -Vv | grep 'host: ' | sed 's/^host: \(.*\)$/\1/'"
-RUN rustup toolchain install nightly-2023-03-14 --component llvm-tools-preview
-RUN rustup target add wasm32-unknown-unknown --toolchain nightly-2023-03-14
+RUN rustup toolchain install nightly-$NIGHTLY_TOOLCHAIN_VERSION --component llvm-tools-preview
+RUN rustup target add wasm32-unknown-unknown --toolchain nightly-$NIGHTLY_TOOLCHAIN_VERSION
 RUN rm -rf /root/.rustup/toolchains/nightly-$(eval ${TARGET})
-RUN ln -s ~/.rustup/toolchains/nightly-2023-03-14-$(eval ${TARGET}) ~/.rustup/toolchains/nightly-$(eval ${TARGET})
+RUN ln -s /root/.rustup/toolchains/nightly-$NIGHTLY_TOOLCHAIN_VERSION-$(eval ${TARGET}) /root/.rustup/toolchains/nightly-$(eval ${TARGET})
 RUN rm -f rustup-init.sh
 ENV CARGO_NET_GIT_FETCH_WITH_CLI=true
 ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
@@ -30,13 +31,3 @@ RUN npm install --global yarn
 # Install Gear node binary
 RUN curl -fsSL https://get.gear.rs/vara-testnet-x86_64-unknown-linux-gnu.tar.xz | tar -xJC /usr/bin
 ENV GEAR_NODE_PATH=/usr/bin/gear
-
-# Testing
-RUN git clone https://github.com/gear-dapps/app.git
-WORKDIR /root/app
-RUN make build
-RUN make full-test
-
-# Cleanup
-WORKDIR /root
-RUN rm -rf /root/app
