--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    if: false # FIXME: Remove
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -17,14 +18,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Log in
+      - name: Log in to registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build the image
+      - name: Build and push the PR's image
         if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v4
         with:
@@ -41,7 +42,7 @@ jobs:
           tags: ghcr.io/gear-dapps/gear-env:latest,ghcr.io/gear-dapps/gear-env:1.0
 
   test:
-    needs: build
+    # needs: build # FIXME: Uncomment
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     container: ghcr.io/gear-dapps/gear-env:pr-${{ github.event.number }}
@@ -53,13 +54,21 @@ jobs:
         with:
           repository: gear-dapps/app
 
+      - name: Run pre-checks
+        run: |
+          pwd
+          whoami
+          rustup --version
+          rustc --version
+          cargo --version
+
       - name: Run `app` tests
         run: make full-test
 
-      - name: Build `app`
+      - name: Build the `app`
         run: make build
 
-      - name: Remove PR's Docker image
+      - name: Remove the PR's image
         uses: actions/delete-package-versions@v4
         with:
           package-name: gear-env
