--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,6 +48,7 @@ jobs:
     container: ghcr.io/gear-dapps/gear-env:pr-${{ github.event.number }}
     env:
       CARGO_TERM_COLOR: always
+      RUSTUP_HOME: /root/.rustup
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -59,6 +60,7 @@ jobs:
           pwd
           whoami
           rustup --version
+          echo $RUSTUP_HOME
           rustc --version
           cargo --version
 
