--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           context: docker
           push: true
-          tags: ghcr.io/gear-dapps/gear-env:pr-${{ github.event.number }}
+          tags: ghcr.io/gear-foundation/gear-env:pr-${{ github.event.number }}
 
       - name: Build and push the latest image (master)
         if: github.event_name == 'push' && endsWith(github.ref, 'master')
@@ -39,7 +39,7 @@ jobs:
         with:
           context: docker
           push: true
-          tags: ghcr.io/gear-dapps/gear-env:latest
+          tags: ghcr.io/gear-foundation/gear-env:latest
 
       - name: Get version from tag
         if: github.event_name == 'push' && !endsWith(github.ref, 'master')
@@ -57,21 +57,21 @@ jobs:
           context: docker
           push: true
           tags: >-
-            ghcr.io/gear-dapps/gear-env:${{ steps.version.outputs.VERSION }},
-            ghcr.io/gear-dapps/gear-env:stable
+            ghcr.io/gear-foundation/gear-env:${{ steps.version.outputs.VERSION }},
+            ghcr.io/gear-foundation/gear-env:stable
 
   test:
     needs: build
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    container: ghcr.io/gear-dapps/gear-env:pr-${{ github.event.number }}
+    container: ghcr.io/gear-foundation/gear-env:pr-${{ github.event.number }}
     env:
       CARGO_TERM_COLOR: always
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          repository: gear-dapps/app
+          repository: gear-foundation/dapps-app
 
       - name: List versions
         run: |
