--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,10 +16,10 @@ jobs:
       packages: write
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build and push the PR's image
         if: github.event_name == 'pull_request'
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: docker
           push: true
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build and push the latest image (master)
         if: github.event_name == 'push' && endsWith(github.ref, 'master')
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: docker
           push: true
@@ -52,7 +52,7 @@ jobs:
 
       - name: Build and push the stable image (tag)
         if: github.event_name == 'push' && !endsWith(github.ref, 'master')
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: docker
           push: true
@@ -69,9 +69,9 @@ jobs:
       CARGO_TERM_COLOR: always
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          repository: gear-foundation/dapps-app
+          repository: gear-foundation/dapp-template
 
       - name: List versions
         run: |
@@ -81,8 +81,5 @@ jobs:
           yarn --version
           gear --version
 
-      - name: Run `app` tests
-        run: make full-test
-
-      - name: Build the `app`
-        run: make build
+      - name: Run `dapp-template` tests
+        run: cargo xtask ci
